# DeckTX

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
src/: main.cpp
src/common/: error.h  scope.h  static_vector.h  thread_name.h  types.h
src/crsf/: crc.h  crsf.cpp  crsf.h  frame.h  parameter.h  protocol.h
src/serial/: serial.cpp  serial.h
